crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__coord__tests__mixed_mod.snap
---
source: crates/parse/src/mcf/grammar/coord.rs
expression: "parse_coord(\"5.3475 ^1 ~-1000000000000\")"
---
Group(Coord) at 0:0 - 0:25 {
    Group(CoordPart) at 0:0 - 0:6 {
        Joined(Float) `5.3475` at 0:0 - 0:6
    }
    Token(Whitespace) ` ` at 0:6 - 0:7
    Group(CoordPart) at 0:7 - 0:9 {
        Token(Caret) `^` at 0:7 - 0:8
        Joined(Float) `1` at 0:8 - 0:9
    }
    Token(Whitespace) ` ` at 0:9 - 0:10
    Group(CoordPart) at 0:10 - 0:25 {
        Token(Tilde) `~` at 0:10 - 0:11
        Joined(Float) `-1000000000000` at 0:11 - 0:25
    }
}

